# task_killer

./: .gitignore  Cargo.toml  README.md
crates/tasktui-app/: Cargo.toml  build.rs
crates/tasktui-app/src/: main.rs  update.rs
crates/tasktui-core/: Cargo.toml
crates/tasktui-core/src/: lib.rs
crates/tasktui-platform-windows/: Cargo.toml
crates/tasktui-platform-windows/src/: lib.rs
crates/tasktui-service/: Cargo.toml  build.rs
crates/tasktui-service/src/: main.rs
installer/: task_killer.wxs
scripts/: build-installer.ps1  build-release.ps1  package-github-release.ps1  refresh-release-assets.ps1  run-service-console.ps1  sign-artifacts.ps1  smoke-ping.ps1  uninstall-service.ps1
