[package]
name = "tasktui-app"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
sysinfo.workspace = true
tasktui-core = { path = "../tasktui-core" }
tasktui-platform-windows = { path = "../tasktui-platform-windows" }
