[package]
name = "tasktui-platform-windows"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tasktui-core = { path = "../tasktui-core" }
windows.workspace = true
wmi.workspace = true
